WiP: switching to material tables in blocks component (moving files to desk)

--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -1,5 +1,39 @@
 <div class="row">
-  <div class="field has-addons">
+  <table  mat-table [dataSource]="blocks" class="mat-elevation-z8">
+    
+    <ng-container matColumnDef="height">
+      <th mat-header-cell *matHeaderCellDef> Height </th>
+      <td mat-cell *matCellDef="let block">
+        {{block.height}}
+      </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="transactions">
+      <th mat-header-cell *matHeaderCellDef> Transactions </th>
+      <td mat-cell *matCellDef="let block">
+        {{block.txs}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="proposer">
+      <th mat-header-cell *matHeaderCellDef> Proposer </th>
+      <td mat-cell *matCellDef="let block"> 
+        {{block.proposer}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="timestamp">
+      <th mat-header-cell *matHeaderCellDef> Timestamp </th>
+      <td mat-cell *matCellDef="let block">  
+        {{block.time}}
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+      
+  <!-- <div class="field has-addons">
     <div class="control">
       <input class="input" placeholder = "Enter block height" #queryInputRef >
     </div>
@@ -22,7 +56,6 @@
             <tr>
               <th >Height</th>
               <th>Transactions</th>
-              <!-- <th>Hash</th> -->
               <th>Proposer</th>
               <th>Timestamp (UTC)</th>
             </tr>
@@ -33,8 +66,7 @@
               <td class="td-2">{{block.txs}}</td>
               <td class="td-1">{{block.proposer}}</td>
               <td class="td-2">{{block.time}}</td>
-              <!-- <td><a class="button is-small is-primary" href="#">{{validator.power}}</a></td> -->
-            </tr>
+             </tr>
           </tbody>
         </table>
     </div>
@@ -42,5 +74,5 @@
   <nav class="pagination" role="navigation" aria-label="pagination">
     <button disabled id="btn-newer" (click)="displayNewerBlocks()" class="pagination-previous button is-dark">Newer</button>
     <button id="btn-older" (click)="displayOlderBlocks()" class="pagination-next button is-dark">Older</button>
-  </nav>
+  </nav> -->
 </div>
