materialized query row;added tooltip, dummy validator page dialog; general materialization

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -344,7 +344,7 @@ footer p {
 /*-------------------------------------------------*/
 /* Responsive Nav */
 /*-------------------------------------------------*/
-.example-card {
+.query-card {
   background: #00796B;
   color: white;
 }
