--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet"> -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   </head>
 <mat-sidenav-container>
@@ -34,7 +34,7 @@
           <div class="row chain-queries-row" @fadeInAnimation>
             <div class="col span-1-of-4">
               <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
-                <mat-card class="example-card">
+                <mat-card class="query-card" matTooltip="Latest Block Height" matTooltipPosition="above">
                   <mat-card-header>
                     <mat-card-title class="subtitle box-key" style="margin-left:-11px">
                       <i class="ion-cube"></i>&nbsp;Last Block
@@ -51,7 +51,7 @@
               </div>
             </div>
             <div class="col span-1-of-4">
-              <mat-card class="example-card">
+              <mat-card class="query-card" matTooltip="Consensus State" matTooltipPosition="above">
                 <mat-card-header>
                   <mat-card-title class="subtitle box-key" style="margin-left:-11px">
                     <i class="ion-load-a"></i>&nbsp;Consensus
@@ -63,7 +63,7 @@
               </mat-card>                  
             </div>
             <div class="col span-1-of-4">
-              <mat-card class="example-card">
+              <mat-card class="query-card" matTooltip="Total Active Validators" matTooltipPosition="above">
                 <mat-card-header>
                   <mat-card-title class="subtitle box-key" style="margin-left:-11px">
                     <i class="ion-person-stalker"></i>&nbsp;Validators
@@ -76,7 +76,7 @@
             </div>
             <div class="col span-1-of-4">
               <div style="cursor: pointer;" routerLink="/validators" class="is-parent">
-                <mat-card class="example-card">
+                <mat-card class="query-card" matTooltip="Total Bonded Stake" matTooltipPosition="above">
                   <mat-card-header>
                     <mat-card-title class="subtitle box-key" style="margin-left:-11px">
                       <i class="ion-soup-can"></i>&nbsp;Bonded/Unbonded
@@ -84,9 +84,9 @@
                   </mat-card-header>
                   <mat-card-content>
                       <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
-                        {{(appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}}
-                        <br>
-                        {{(appState | async).stakePool.not_bonded_tokens/1e6 | number:'.0-0'}}
+                        {{(appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} (in %)
+                        <!-- <br>
+                        {{(appState | async).stakePool.not_bonded_tokens/1e6 | number:'.0-0'}} -->
                       </h3>
                   </mat-card-content>
                 </mat-card>                  
