--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import "https://fonts.googleapis.com/css?family=Lato:100,300,300i,400";
+
 @viewport {
   width: device-width ;
   zoom: 1.0 ;
