--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,350 @@ body{
   color: #F7F7F7;
 }
 
+/* @aakatev moved from app.components.css */
+/*-------------------------------------------------*/
+/* Basic Setup */
+/*-------------------------------------------------*/
+html, body {
+  font-size: 20px;
+  line-height: 1.5;
+  height: 100%;
+  background: #111923;
+  color: white;
+  font-family: 'Lato', 'Arial', sans-serif;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+}
+
+.clearfix {zoom: 1;}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
+/*-------------------------------------------------*/
+/* Reusable Components */
+/*-------------------------------------------------*/
+nav {
+  height: 10vh;
+  background: #111923;
+}
+
+section {
+  padding: 20px 0;
+  margin-bottom: 50px;
+}
+
+.row {
+  max-width: 90%; /*1140px or in %*/
+  margin: 0 auto;
+}
+
+.box {
+  padding: 1%;
+  /* box-shadow: 2px 2px 3px; */
+}
+
+/* .box-key {
+  text-align: left;
+  margin-left: 5px;
+} */
+
+.mat-card-header-text {
+  margin-left: 5px;
+}
+
+.box-value {
+  text-align: right;
+  margin-right: 5px;
+}
+
+.hero {
+  background: rgba(0, 121, 107, 0.8); /*#2461acb0*/
+}
+/*-------------------------------------------------*/
+/* Heading */
+/*-------------------------------------------------*/
+h1,
+h2,
+h3 {
+    font-weight: 300;
+    /* text-transform: uppercase; */
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-size: 200%;
+  /* word-spacing: 3px;
+  letter-spacing: 1px; */
+}
+
+h2 {
+  font-size: 130%;
+  word-spacing: 2px;
+  text-align: left;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+h3 {
+  font-size: 120%;
+  /* margin-bottom: 15px; */
+  text-align: center;
+}
+
+/*-------------------------------------------------*/
+/* Paragraphs */
+/*-------------------------------------------------*/
+p {
+  font-size: 100%;
+  text-align: center;
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+}
+
+/*-------------------------------------------------*/
+/* Links */
+/*-------------------------------------------------*/
+a:link,
+a:visited {
+    color: white;
+    text-decoration: none;
+    /* padding-bottom: 10px; */
+    /* border-bottom: 1px solid #e67e22; */
+    transition: color 0.2s;
+}
+
+a:hover,
+a:active {
+    color: #FC7D14;
+    /* border-bottom: 1px solid transparent; */
+}
+
+/*-------------------------------------------------*/
+/* Header */
+/*-------------------------------------------------*/
+header {
+  height: 15vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+
+.main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 55px;
+  display: flex;
+  list-style: none;
+  height: 100%;
+  align-items: center;
+  margin-left: auto;
+  justify-content: space-around;
+}
+
+.main-nav li {
+  display: inline-block;
+  margin-left: 40px;
+}
+
+.landing {
+  /* height: 90vh; */
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+
+}
+/*-------------------------------------------------*/
+/* Specific */
+/*-------------------------------------------------*/
+/* .header-row,
+.proposer-row,
+.chain-queries-row {
+  max-width: 1140px;
+  margin: 0 20px;
+
+}  */
+
+.main-container {
+  min-height: 76vh;
+}
+
+.card {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
+  margin-bottom: 2rem;
+}
+.card-header-title {
+  color:#8F99A3;
+  font-weight: 400;
+}
+
+.box {
+  background: #00796B;
+}
+
+article {
+  background: #111923;
+}
+
+.title {
+  font-weight: 500;
+  color: rgb(255, 255, 255);
+}
+
+.subtitle {
+  font-weight: 400;
+  color:#111923;
+}
+
+
+.header-title,
+.header-subtitle {
+  text-align: left;
+}
+
+.header-subtitle {
+ color: #FC7D14
+}
+
+.card .content {
+  font-size: 14px;
+}
+
+.card-footer-item {
+  font-size: 14px;
+  font-weight: 700;
+  color: #8F99A3;
+}
+
+.card-table .table {
+  margin-bottom: 0;
+}
+
+.events-card .card-table {
+  /*max-height: 500px;*/
+  overflow-y: scroll;
+}
+
+ .navbar{
+  background: #0D151F;
+}
+
+/*-------------------------------------------------*/
+/* Footer */
+/*-------------------------------------------------*/
+footer {
+  background-color: #0D151F;
+  color: white;
+  padding: 30px;
+}
+
+.footer-nav {
+  list-style: none;
+  float: left;
+  /* margin-top: 20px; */
+}
+
+
+.social-links {
+  list-style: none;
+  float: right;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+footer p a:link,
+footer p a:visited,
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link, 
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888888;
+    transition: color 0.2s;
+}
+
+footer p a:hover,
+footer p a:active,
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #FC7D14;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 150%;
+}
+
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+    transition: color 0.2s;
+}
+
+.ion-social-github:hover {
+    color: #a6b1b7;
+}
+
+.ion-social-twitter:hover {
+    color: #00aced;
+}
+
+.ion-paper-airplane:hover {
+    color: #0088cc;
+}
+
+.ion-social-linkedin:hover {
+    color: #007bb5;
+}
+
+footer p {
+  color: #888888;
+  text-align: center;
+  margin-top: 20px;
+}
+
+/*-------------------------------------------------*/
+/* Responsive Nav */
+/*-------------------------------------------------*/
+.query-card {
+  background: #00796B;
+  color: white;
+}
+
+
 /* Material navbar */
 .mat-drawer-inner-container {
   background-color: #111923;
@@ -36,3 +380,4 @@ body{
   color:#111923;
   background-color: #F7F7F7;
 }
+/* End moved from app.components.css */
