--- a/src/app/components/txs/txs.component.css
+++ b/src/app/components/txs/txs.component.css
@@ -4,17 +4,11 @@
 .row {
   max-width: 90%;
   margin: 0 auto;
-
 }
 
 p {
   padding: 1px;
 }
-
-.box {
-  padding: 1%;
-}
-
 /*-------------------------------------------------*/
 /* Table */
 /*-------------------------------------------------*/
@@ -80,4 +74,29 @@ tbody {
 
 .td-2 {
   color: #00A58F;
+}
+
+/* mat-table */
+.mat-row:nth-child(even){
+  background-color:#0D151F;
+}
+
+.mat-row:nth-child(odd){
+  background-color:#111923;
+}
+
+.mat-header-cell, .mat-cell {
+  font-size: 20px;
+  font-family: 'Lato', 'Arial', sans-serif;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+  vertical-align: middle;
+}
+
+.mat-header-cell {
+  color: #111923;
+}
+
+.mat-cell {
+  color: #F7F7F7;
 }
