--- a/src/app/components/navigation/header/header.component.css
+++ b/src/app/components/navigation/header/header.component.css
@@ -1,41 +1,10 @@
-.row {
-  max-width: 90%; /*1140px or in %*/
-  margin: 0 auto;
-}
-
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-
-a:hover,
-a:active {
-  color: lightgray;
-}
-
-
-.nav-items {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-elem {
-  display: inline-block;
-  padding: 6px;
-}
-
-.logo {
-  padding: 10px; 
-  height: 120px;
-  width: auto;
-  float: left;
-  margin-top: 20px;
-}
-
 .mat-toolbar.mat-primary {
   background: #111923;
-  height: 10vh;
+}
+
+.mat-toolbar {
+  height: 20vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
