--- a/src/app/components/navigation/header/header.component.html
+++ b/src/app/components/navigation/header/header.component.html
@@ -10,7 +10,7 @@
     <a href="#"><img src="../../../../assets/img/Coris_logo.png" class="logo"></a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
-    <ul fxLayout fxLayoutGap="10px" class="nav-items">
+    <ul fxLayout fxLayoutGap="10px" class="main-nav">
       <li><a routerLink="/validators">Validators</a></li>
       <li><a routerLink="/blocks">Blocks</a></li>
       <li><a routerLink="/txs">Transactions</a></li>
