--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -69,7 +69,7 @@
     <ng-container matColumnDef="unbond">
       <th mat-header-cell *matHeaderCellDef> Unbond </th>
       <td mat-cell *matCellDef="let validator">
-        - Un-bond<br>- completeion time
+        - Un-bond<br>- completion time
       </td>
     </ng-container>
     
