--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -70,11 +70,12 @@
           </mat-card-header>
           <mat-card-content>
               <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
-                {{
+                {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}}
+                ({{
                   (appState | async).stakePool.bonded_tokens/1e6
                   /((appState | async).stakePool.bonded_tokens/1e6 + (appState | async).stakePool.not_bonded_tokens/1e6) 
-                  * 100 | number
-                }}%
+                  | percent: '.2-2'
+                }})
                 <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
               </h3>
           </mat-card-content>
