--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -1,7 +1,8 @@
 <div class="row">
-  <button
-  (click)="openDialog()"
-  mat-raised-button>open</button>
+  <!-- <button
+    (click)="openDialog()"
+    mat-raised-button>open
+  </button> -->
   <table  mat-table matSort (matSortChange)="sortData($event)" [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- <ng-container matColumnDef="index">
       <th mat-header-cell *matHeaderCellDef> Index </th>
@@ -10,7 +11,7 @@
     <ng-container  matColumnDef="moniker">
       <th mat-sort-header="name" mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let validator" id="{{validator.hex_address}}"> 
-        <figure class="validator-avatar is-128x128" *ngIf="validator.keybase">
+        <figure style="cursor: pointer;" (click)="openDialog(validator)" class="validator-avatar is-128x128" *ngIf="validator.keybase">
           <img  
             *ngIf="!validator.picture; else elseBlock" 
             src="https://ui-avatars.com/api/?size=50&name={{validator.description.moniker}}" 
