--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -1,4 +1,4 @@
-<div>
+<mat-card>
   <div>
     <div style="display: block">
       <canvas baseChart
@@ -8,4 +8,4 @@
       </canvas>
     </div>
   </div>
-</div>
+</mat-card>
