Added gov component

--- a/src/app/components/navigation/main-nav/main-nav.component.html
+++ b/src/app/components/navigation/main-nav/main-nav.component.html
@@ -13,6 +13,7 @@
         <a mat-list-item routerLink="/validators">Validators</a>
         <a mat-list-item routerLink="/blocks">Blocks</a>
         <a mat-list-item routerLink="/txs">Transactions</a>
+        <a mat-list-item routerLink="/gov">Governance</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
@@ -33,7 +34,7 @@
           <a routerLink="/validators">Validators</a>
           <a routerLink="/blocks">Blocks</a>
           <a routerLink="/txs">Transactions</a>
-          <a routerLink="/txs">Governance</a>
+          <a routerLink="/gov">Governance</a>
             <li class="dropdown" appDropdown>
               <a class="dropdown-toggle" role="button">Network<span class="caret"></span></a>
               <ul class="dropdown-menu">
