--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -18,7 +18,7 @@
     <ng-container matColumnDef="proposer">
       <th mat-header-cell *matHeaderCellDef> Proposer </th>
       <td mat-cell *matCellDef="let block"> 
-        {{block.proposer}}
+        {{ (appState | async).valsMap.size ? (appState | async).valsMap.get(block.proposer) : '-'}}
       </td>
     </ng-container>
 
