--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -25,7 +25,7 @@
     <ng-container matColumnDef="submitted">
       <th mat-header-cell *matHeaderCellDef> Submitted </th>
       <td mat-cell *matCellDef="let proposal">  
-        {{proposal.value.submit_time}}
+        {{proposal.value.submit_time | date:"h:mm:ss a, MMM d, y"}}
       </td>
     </ng-container>
   
@@ -33,14 +33,14 @@
     <ng-container matColumnDef="voting">
       <th mat-header-cell *matHeaderCellDef> Voting Started </th>
       <td mat-cell *matCellDef="let proposal">  
-        {{proposal.value.voting_start_time}}
+        {{proposal.value.voting_start_time | date:"h:mm:ss a, MMM d, y"}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="deposit">
       <th mat-header-cell *matHeaderCellDef> Deposit </th>
       <td mat-cell *matCellDef="let proposal">  
-        {{proposal.value.total_deposit[0].amount}}
+        {{proposal.value.total_deposit[0].amount/1e6 | number:".2-2"}} ATOM
       </td>
     </ng-container>
 
