--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -12,69 +12,130 @@
       </h2>
     </div>
   </div>
-  <div class="row chain-queries-row" @fadeInAnimation *ngIf="(appState | async).blocks.length; else elseBlock">
-    <div class="col span-1-of-4">
-      <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
-        <mat-card class="query-card" matTooltip="Latest Block Height" matTooltipPosition="above">
+  <div @fadeInAnimation class="row-queries">
+    <div class="row" *ngIf="(appState | async).blocks.length; else elseBlock">
+      <div class="col span-1-of-4">
+        <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
+          <mat-card class="query-card" matTooltip="Latest Block Height" matTooltipPosition="above">
+            <mat-card-header>
+              <mat-card-title class="subtitle box-key" style="margin-left:-11px">
+                <i class="ion-cube"></i>&nbsp;Last Block
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <h3
+                *ngFor="let block of (appState | async).blocks.reverse().slice(0,1)"
+                class="title chain-queries-title box-value"
+                [innerHTML]="block.header?.height !== null ? block.header.height : 0">
+              </h3>
+            </mat-card-content>
+          </mat-card>                  
+        </div>
+      </div>
+      <div class="col span-1-of-4">
+        <mat-card class="query-card" matTooltip="Consensus State" matTooltipPosition="above">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
-              <i class="ion-cube"></i>&nbsp;Last Block
+              <i class="ion-load-a"></i>&nbsp;Consensus
             </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-            <h3
-              *ngFor="let block of (appState | async).blocks.reverse().slice(0,1)"
-              class="title chain-queries-title box-value"
-              [innerHTML]="block.header?.height !== null ? block.header.height : 0">
-            </h3>
+            <h3 class="title chain-queries-title box-value">{{(appState | async).roundStep.step?.split('RoundStep')[1]}}</h3>
           </mat-card-content>
         </mat-card>                  
       </div>
-    </div>
-    <div class="col span-1-of-4">
-      <mat-card class="query-card" matTooltip="Consensus State" matTooltipPosition="above">
-        <mat-card-header>
-          <mat-card-title class="subtitle box-key" style="margin-left:-11px">
-            <i class="ion-load-a"></i>&nbsp;Consensus
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <h3 class="title chain-queries-title box-value">{{(appState | async).roundStep.step?.split('RoundStep')[1]}}</h3>
-        </mat-card-content>
-      </mat-card>                  
-    </div>
-    <div class="col span-1-of-4">
-      <mat-card class="query-card" matTooltip="Total Active Validators" matTooltipPosition="above">
-        <mat-card-header>
-          <mat-card-title class="subtitle box-key" style="margin-left:-11px">
-            <i class="ion-person-stalker"></i>&nbsp;Validators
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-            <h3 class="title chain-queries-title box-value">{{(appState | async).validators?.length}}</h3>
-        </mat-card-content>
-      </mat-card>    
-    </div>
-    <div class="col span-1-of-4">
-      <div style="cursor: pointer;" routerLink="/validators" class="is-parent">
-        <mat-card class="query-card" matTooltip="Total Bonded Stake" matTooltipPosition="above">
+      <div class="col span-1-of-4">
+        <mat-card class="query-card" matTooltip="Total Active Validators" matTooltipPosition="above">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
-              <i class="ion-soup-can"></i>&nbsp;Bonded
+              <i class="ion-person-stalker"></i>&nbsp;Validators
             </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-              <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
-                {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}}
-                ({{
-                  (appState | async).stakePool.bonded_tokens/1e6
-                  /((appState | async).stakePool.bonded_tokens/1e6 + (appState | async).stakePool.not_bonded_tokens/1e6) 
-                  | percent: '.2-2'
-                }})
-                <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
+              <h3 class="title chain-queries-title box-value">{{(appState | async).validators?.length}}</h3>
+          </mat-card-content>
+        </mat-card>    
+      </div>
+      <div class="col span-1-of-4">
+        <div style="cursor: pointer;" routerLink="/validators" class="is-parent">
+          <mat-card class="query-card" matTooltip="Total Bonded Stake" matTooltipPosition="above">
+            <mat-card-header>
+              <mat-card-title class="subtitle box-key" style="margin-left:-11px">
+                <i class="ion-soup-can"></i>&nbsp;Bonded
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
+                  {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}}
+                  ({{
+                    (appState | async).stakePool.bonded_tokens/1e6
+                    /((appState | async).stakePool.bonded_tokens/1e6 + (appState | async).stakePool.not_bonded_tokens/1e6) 
+                    | percent: '.2-2'
+                  }})
+                  <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
+                </h3>
+            </mat-card-content>
+          </mat-card>                  
+        </div>
+      </div>
+    </div>
+    <div class="row" *ngIf="(appState | async).blocks.length; else elseBlock">
+      <div class="col span-1-of-4">
+        <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
+          <mat-card class="query-card" matTooltip="Block Interval" matTooltipPosition="above">
+            <mat-card-header>
+              <mat-card-title class="subtitle box-key" style="margin-left:-11px">
+                <i class="ion-ios-clock"></i>&nbsp;Block Time
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <h3 class="title box-value">
+                Add time
               </h3>
+            </mat-card-content>
+          </mat-card>                  
+        </div>
+      </div>
+      <div class="col span-1-of-4">
+        <mat-card class="query-card" matTooltip="Global Average Commission Rate" matTooltipPosition="above">
+          <mat-card-header>
+            <mat-card-title class="subtitle box-key" style="margin-left:-11px">
+              <i class="ion-cash"></i>&nbsp;Commission
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <h3 class="title chain-queries-title box-value">Add commission</h3>
           </mat-card-content>
         </mat-card>                  
+      </div>
+      <div class="col span-1-of-4">
+        <mat-card class="query-card" matTooltip="Inflation Rate" matTooltipPosition="above">
+          <mat-card-header>
+            <mat-card-title class="subtitle box-key" style="margin-left:-11px">
+              <i class="ion-android-arrow-up"></i>&nbsp;Inflation
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+              <h3 class="title chain-queries-title box-value">Add inflation%</h3>
+          </mat-card-content>
+        </mat-card>    
+      </div>
+      <div class="col span-1-of-4">
+        <div style="cursor: pointer;" routerLink="/validators" class="is-parent">
+          <mat-card class="query-card" matTooltip="ATOM USD Price" matTooltipPosition="above">
+            <mat-card-header>
+              <mat-card-title class="subtitle box-key" style="margin-left:-11px">
+                <i class="ion-social-usd"></i>&nbsp;Price
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
+                  See pricing.service.ts
+                  <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
+                </h3>
+            </mat-card-content>
+          </mat-card>                  
+        </div>
       </div>
     </div>
   </div>
