--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -31,7 +31,13 @@
       <ng-container matColumnDef="fee">
         <mat-header-cell *matHeaderCellDef> Fee </mat-header-cell>
         <mat-cell *matCellDef="let tx">
-          {{tx.gasUsed}}
+          {{ 
+            tx.details?.tx.value.fee.amount ?
+            tx.details.tx.value.fee.amount[0].amount
+              + ' ' 
+              + tx.details.tx.value.fee.amount[0].denom :
+            '-' 
+          }}
         </mat-cell>
       </ng-container>
   
