--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -30,7 +30,7 @@
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row @rowsAnimation *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
       
   <!-- <div class="field has-addons">
