added sticky navbar. color scheme refinement

--- a/src/app/components/blocks/blocks.component.css
+++ b/src/app/components/blocks/blocks.component.css
@@ -93,9 +93,13 @@ tbody {
 }
 
 .mat-header-cell {
-  color: #111923;
+  color: #ffffff;
 }
 
 .mat-cell {
   color: #F7F7F7;
+}
+
+.mat-header-row {
+  background-color: #00796B;
 }
