--- a/src/styles.css
+++ b/src/styles.css
@@ -206,7 +206,7 @@ article {
 
 .subtitle {
   font-weight: 400;
-  color:#111923;
+  color:#FFC107;
 }
 
 
@@ -216,7 +216,7 @@ article {
 }
 
 .header-subtitle {
- color: #FC7D14
+ color: #FFC107
 }
 
 .card .content {
