--- a/src/app/components/status-bar/status-bar.component.css
+++ b/src/app/components/status-bar/status-bar.component.css
@@ -1,3 +1,11 @@
+.status-bar {
+    margin-top: 80px;
+}
+
+.header-subtitle {
+    font-size: 150%;
+}
+
 @media screen and (max-width: 768px) {
     .row {
         max-width: 95%; /*1140px or in %*/
