--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -1,8 +1,8 @@
-<section class="landing">
+<section class="status-bar">
   <div class="row header-row" @dropDownAnimation>
-    <h1 class="title header-title" [appBgHighlight]="'orange'" defaultColor="transparent">
+    <!-- <h1 class="title header-title" [appBgHighlight]="'orange'" defaultColor="transparent">
       Coris Explorer 
-    </h1>
+    </h1> -->
     <h2 class="subtitle header-subtitle" @fadeInAnimation>{{(appState | async).blocks[0]?.header.chain_id}}</h2>
   </div>
   <div class="row proposer-row">
