--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -96,7 +96,9 @@
     <ng-container matColumnDef="commission">
       <th mat-header-cell *matHeaderCellDef> Commission </th>
       <td mat-cell *matCellDef="let validator"> 
-        {{validator.commission?.rate | percent}}-maxRate-maxChangeRate
+        {{validator.commission?.rate | percent}}-
+        {{validator.commission?.max_rate | percent}}- 
+        {{validator.commission?.max_change_rate | percent}}
       </td>
     </ng-container>
 
