--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     <body>
       <app-status-bar></app-status-bar>
       <router-outlet></router-outlet>
+      <app-scroll-top></app-scroll-top>
     </body>
     <app-footer></app-footer>      
   </app-main-nav>
