--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -130,7 +130,7 @@
             </mat-card-header>
             <mat-card-content>
                 <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
-                  {{ atomData?.quote.USD.price | number:'.6' }}
+                  $ {{ atomData?.quote.USD.price | number:'.6' }}
                   <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
                 </h3>
             </mat-card-content>
