WiP: Initiated service to calculate Block Time (only for 20 last blocks so far)

--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -90,7 +90,7 @@
             </mat-card-header>
             <mat-card-content>
               <h3 class="title box-value">
-                Add time
+                {{avgBlockTime | number: '.2-3'}} sec.
               </h3>
             </mat-card-content>
           </mat-card>                  
